# CS202-Group04-FinalProject

./: .gitignore  CMakeLists.txt  CODING_RULES.md  CS202-FinalProject_SuperMario.md  FILE_STRUCTURE.md  README.md  ROLES.md  WEEKLY_PLAN.md
docs/: class_diagram.md
src/: main.cpp
